# tang

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  libtest_synth.dylib  session.toml  session_pianoteq9_vst3.toml
.github/workflows/: ci.yml
OctaSine v0.9.clap/Contents/: Info.plist
examples/: session.toml  session_pianoteq9.toml  session_pianoteq9_lv2.toml  session_pianoteq9_vst3.toml  session_split.toml
lv2-sys-patch/: .cargo_vcs_info.json  Cargo.toml
lv2-sys-patch/src/: lib.rs
src/: audio.rs  cli.rs  config.rs  enumerate.rs  main.rs  midi.rs  piano.rs  session.rs
src/plugin/: autodetect.rs  builtin.rs  chain.rs  clap.rs  lv2.rs  mod.rs  vst3.rs
src/tui/: mod.rs
view/: Cargo.toml
view/examples/: demo.rs
view/src/: filter_list.rs  lib.rs  list.rs  scroll_view.rs  tab_bar.rs  text_input.rs
